--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -9,6 +9,8 @@
 # production
 /build
 
+/babel_cache
+
 # misc
 .DS_Store
 .env.local
@@ -19,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/yarn.lock
