--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-bootstrap": "^0.32.1",
-        "webpack": "^3.10.0"
+        "webpack": "^3.10.0",
+        "webpack-dev-server": "^2.11.1",
+        "style-loader": "^0.20.1",
+        "css-loader": "^0.28.9"
     }
 }
