--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
+        "babel-eslint": "^8.2.1",
         "eslint": "^4.16.0",
         "eslint-plugin-babel": "^4.1.2",
         "eslint-plugin-react": "^7.6.0",
