--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,22 +7,28 @@
         "compile": "./node_modules/.bin/webpack"
     },
     "devDependencies": {
+        "apollo-client": "^2.2.1",
         "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-2": "^6.24.1",
         "babel-eslint": "^8.2.1",
+        "babel-loader": "^7.1.2",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "css-loader": "^0.28.9",
         "eslint": "^4.16.0",
         "eslint-plugin-babel": "^4.1.2",
         "eslint-plugin-react": "^7.6.0",
         "file-loader": "^1.1.6",
+        "graphql": "^0.11.0",
+        "graphql-tag": "^2.6.1",
         "react": "^16.2.0",
-        "react-dom": "^16.2.0",
         "react-bootstrap": "^0.32.1",
-        "webpack": "^3.10.0",
-        "webpack-dev-server": "^2.11.1",
+        "react-dom": "^16.2.0",
+        "react-apollo": "^2.0.4",
+        "apollo-cache-inmemory": "^1.1.5",
+        "apollo-link-http": "^1.3.2",
         "style-loader": "^0.20.1",
-        "css-loader": "^0.28.9"
+        "webpack": "^3.10.0",
+        "webpack-dev-server": "^2.11.1"
     }
 }
