Sucessfully setup flyway and most of the backend with it.

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
-//    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.12.Final'
-    compile 'org.hibernate:hibernate-jpamodelgen:5.2.12.Final'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.12.Final'
+    compile group: 'org.hibernate', name: 'hibernate-jpamodelgen', version: '5.2.12.Final'
     compile group: 'io.leangen.graphql', name: 'spqr', version: '0.9.5'
     compile group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '3.9.2'
     compile group: 'org.flywaydb', name: 'flyway-core', version: '5.0.7'
