Fix backend to work with Flyway, GraphQL and JPA repositories

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8080
 
 spring.resources.add-mappings=true
+spring.http.multipart.max-file-size=128KB
+spring.http.multipart.max-request-size=128KB
 spring.resources.static-locations=classpath:/static/
 
 spring.datasource.url=${DATABASE_URL}
