--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,26 +1,31 @@
+# Port
 server.port=8080
-
+# Static
 spring.resources.add-mappings=true
-spring.http.multipart.max-file-size=128KB
-spring.http.multipart.max-request-size=128KB
 spring.resources.static-locations=classpath:/static/
-
+spring.mvc.static-path-pattern=/resources/static/**
+# Databaste
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+# Hibernate
 spring.jpa.properties.hibernate.default_schema=public
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.EJB3NamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.use-new-id-generator-mappings=true
+spring.jpa.generate-ddl=false
 spring.jpa.open-in-view=true
+# Flyway
+spring.flyway.enabled=true
+# Logging
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=WARN
+# Dev-Tools
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
 spring.jpa.show-sql=true
-
-logging.level.org.springframework.web=DEBUG
-
-flyway.enabled=true
-flyway.locations=classpath:db/migrations
