--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.open-in-view=true
 # Flyway
 spring.flyway.enabled=true
+spring.flyway.table=schema_version
 # Logging
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
