--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -68,7 +68,12 @@
         </dependency>
         <dependency>
             <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-spring-boot-starter</artifactId>
+            <artifactId>graphql-java-servlet</artifactId>
+            <version>4.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphiql-spring-boot-starter</artifactId>
             <version>3.9.2</version>
         </dependency>
 
