--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Port
 server.port=8080
+
 # Static
 spring.resources.add-mappings=true
 spring.resources.static-locations=classpath:/static/
@@ -19,6 +20,12 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.generate-ddl=false
 spring.jpa.open-in-view=true
+# GraphQL
+graphql.servlet.enabled=true
+graphql.servlet.mapping=/graphql
+graphiql.enabled=true
+graphiql.mapping=/graphiql
+
 # Flyway
 spring.flyway.enabled=true
 spring.flyway.table=schema_version
