--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,18 +16,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.generate-ddl=false
 spring.jpa.open-in-view=true
 # GraphQL
-graphql.servlet.enabled=true
-graphql.servlet.mapping=/graphql
 graphiql.enabled=true
 graphiql.mapping=/graphiql
 
 # Flyway
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.table=schema_version
 # Logging
 logging.level.root=INFO
