--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,18 +2,21 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
+    "main": "index.js",
     "scripts": {
-        "start": "./node_modules/.bin/webpack-dev-server --watch",
+        "start": "./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --mode development",
         "compile": "./node_modules/.bin/webpack"
     },
     "devDependencies": {
         "apollo-client": "^2.2.7",
+        "apollo-cache-inmemory": "^1.1.11",
+        "apollo-link-http": "^1.5.3",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.2",
         "babel-loader": "^7.1.4",
         "babel-preset-react": "^6.24.1",
-        "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
+        "bootstrap": "^4.0.0",
         "css-loader": "^0.28.11",
         "eslint": "^4.19.1",
         "eslint-plugin-babel": "^4.1.2",
@@ -21,15 +24,23 @@
         "file-loader": "^1.1.11",
         "graphql": "^0.13.2",
         "graphql-tag": "^2.8.0",
-        "react": "^16.2.0",
-        "react-bootstrap": "^0.32.1",
-        "react-dom": "^16.2.0",
-        "react-router": "^4.2.0",
+        "jquery": "^3.3.1",
+        "popper.js": "^1.14.1",
+        "prop-types": "^15.6.1",
         "react-apollo": "^2.1.0",
-        "apollo-cache-inmemory": "^1.1.11",
-        "apollo-link-http": "^1.5.3",
+        "react-bootstrap": "^0.32.1",
+        "react-hot-loader": "^4.0.0",
+        "react-router": "^4.2.0",
+        "react-router-dom": "^4.2.2",
+        "reactstrap": "^5.0.0-beta.3",
         "style-loader": "^0.20.3",
         "webpack": "^4.2.0",
+        "webpack-cli": "^2.0.13",
         "webpack-dev-server": "^3.1.1"
+    },
+    "dependencies": {
+        "babel-preset-env": "^1.6.1",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
     }
 }
