--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,43 +4,42 @@
     "private": true,
     "main": "index.js",
     "scripts": {
-        "start": "./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --mode development",
+        "start": "./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --color --progress --mode development",
         "compile": "./node_modules/.bin/webpack"
     },
     "devDependencies": {
-        "apollo-client": "^2.2.7",
-        "apollo-cache-inmemory": "^1.1.11",
-        "apollo-link-http": "^1.5.3",
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^8.2.2",
+        "apollo-boost": "^0.1.7",
+        "apollo-client": "^2.3.2",
+        "babel-core": "^6.26.3",
+        "babel-eslint": "^8.2.3",
         "babel-loader": "^7.1.4",
+        "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
-        "bootstrap": "^4.0.0",
+        "bulma": "^0.7.1",
         "css-loader": "^0.28.11",
         "eslint": "^4.19.1",
-        "eslint-plugin-babel": "^4.1.2",
-        "eslint-plugin-react": "^7.7.0",
+        "eslint-plugin-babel": "^5.1.0",
+        "eslint-plugin-react": "^7.8.2",
         "file-loader": "^1.1.11",
         "graphql": "^0.13.2",
-        "graphql-tag": "^2.8.0",
+        "graphql-tag": "^2.9.2",
         "jquery": "^3.3.1",
-        "popper.js": "^1.14.1",
+        "popper.js": "^1.14.3",
         "prop-types": "^15.6.1",
-        "react-apollo": "^2.1.0",
+        "react": "^16.4.0",
+        "react-apollo": "^2.1.4",
         "react-bootstrap": "^0.32.1",
+        "react-dom": "^16.4.0",
         "react-hot-loader": "^4.0.0",
+        "react-redux": "^5.0.7",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
-        "reactstrap": "^5.0.0-beta.3",
-        "style-loader": "^0.20.3",
-        "webpack": "^4.2.0",
-        "webpack-cli": "^2.0.13",
-        "webpack-dev-server": "^3.1.1"
-    },
-    "dependencies": {
-        "babel-preset-env": "^1.6.1",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "redux": "^4.0.0",
+        "redux-saga": "^0.16.0",
+        "style-loader": "^0.21.0",
+        "webpack": "^4.10.2",
+        "webpack-cli": "^2.1.4",
+        "webpack-dev-server": "^3.1.4"
     }
 }
