--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,11 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
-    "main": "index.js",
+    "main": "index.jsx",
     "scripts": {
         "start": "./node_modules/.bin/webpack-dev-server --config ./webpack.config.js --color --progress --mode development",
+        "lint": "eslint --color src",
+        "lint-fix": "eslint --color --fix src",
         "compile": "./node_modules/.bin/webpack"
     },
     "devDependencies": {
@@ -16,6 +18,7 @@
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
         "bulma": "^0.7.1",
         "css-loader": "^0.28.11",
         "eslint": "^4.19.1",
