--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,32 +5,41 @@ server.port=8080
 spring.resources.add-mappings=true
 spring.resources.static-locations=classpath:/static/
 spring.mvc.static-path-pattern=/resources/static/**
+
 # Databaste
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 # Hibernate
 spring.jpa.properties.hibernate.default_schema=photoshare
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.generate-ddl=false
 spring.jpa.open-in-view=true
+
 # GraphQL
 graphiql.enabled=true
 graphiql.mapping=/graphiql
 
+# File uploads
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=2048MB
+
 # Flyway
 spring.flyway.enabled=false
 spring.flyway.table=schema_version
+
 # Logging
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=WARN
+
 # Dev-Tools
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
