--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
         "react-apollo": "^2.1.4",
         "react-bootstrap": "^0.32.1",
         "react-dom": "^16.4.0",
+        "react-dropzone": "^4.2.11",
+        "react-dropzone-component": "^3.2.0",
         "react-hot-loader": "^4.0.0",
         "react-redux": "^5.0.7",
         "react-router": "^4.2.0",
