--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /frontend/build/
 /frontend/babel_cache/
 /frontend/node_modules/
+/frontend/public/bundle.*
+/backend/src/main/resources/static
+/backend*.jar
