Fix File and Folder uploads from testpage

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # Static
 spring.resources.add-mappings=true
 spring.resources.static-locations=classpath:/static/
-spring.mvc.static-path-pattern=/resources/static/**
+spring.mvc.static-path-pattern=/**
 
 # Databaste
 spring.datasource.url=${DATABASE_URL}
